Updating the DB sources along with cretion of the CSV logic